--- a/parser/pom.xml
+++ b/parser/pom.xml
@@ -39,7 +39,7 @@
         </dependency>
         <dependency>
             <groupId>dev.mrichter</groupId>
-            <artifactId>graph</artifactId>
+            <artifactId>domain</artifactId>
             <version>1.0-SNAPSHOT</version>
             <scope>compile</scope>
         </dependency>
